--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>HTML</h1>
-    <p>JasonVolney</p>
+<img src="https://avatars1.githubusercontent.com/u/54520187?v=4">
+
 </body>
 </html>
