--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>HTML</h1>
+    <ol>This</ol>
+    <ol>is an</ol>
+    <ol>list</ol>
 <img src="https://avatars1.githubusercontent.com/u/54520187?v=4">
 
 </body>
