--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
 </head>
 <body>
     <h1>HTML</h1>
+    <ul>
+    <li>This</li>
+    <li>is an</li>
+    <li>list</li>
+    </ul>
+   
+    <ol>
+    <li>This</li>
+    <li>is an</li>
+    <li>list</li>
+    </ol>
+
+    
 <img src="https://avatars1.githubusercontent.com/u/54520187?v=4">
 
 </body>
